[package]
name = "key_manager"
version = "0.1.0"
authors = ["dcastro <daniel.castro@ist.utl.pt>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = '^2.33.3'

# data-encoding = '^2.3.0'
# rcgen = '^0.8.5'
openssl = '^0.10'
# ring = '^0.16.15'
# rustls = '^0.18.1'
untrusted = '^0.7.1'

